--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   ],
   "dependencies": {
     "axios": "^0.15.3",
-    "vue": "^2.2.1"
+    "vue": "^2.2.1",
+    "vuex": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
